objects/L2I_Support_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Opportunity__r.Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Region__c</fullName>
        <formula>Opportunity__r.L2I_Oppt_Region__c</formula>
        <label>Account Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Completed_Date__c</fullName>
        <label>Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>L2I_Age__c</fullName>
        <formula>BLANKVALUE( Completed_Date__c , TODAY()) - BLANKVALUE( Start_Date__c , TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>L2I_SR_CAPEX_Offset_Quip_URL__c</fullName>
        <label>SR-CAPEX Offset Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_SR_Conn_TV_Games_Quip_URL__c</fullName>
        <label>SR-Conn-TV-Games Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_SR_PTS_Quip_URL__c</fullName>
        <label>SR-PTS Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_SR_Rev_Share_Quip_URL__c</fullName>
        <label>SR-Rev Share Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>L2I_SR_Tech_Review_Quip_URL__c</fullName>
        <label>SR-Tech Review Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Opportunity_Number__c</fullName>
        <formula>Opportunity__r.L2I_Opportunity_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Support Requests</relationshipLabel>
        <relationshipName>Support_Requests</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pending_Submit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field used to trigger auto assignment process.</description>
        <label>Pending Submit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSO Support Request</fullName>
                </value>
                <value>
                    <fullName>Connectivity/TV Quote Request</fullName>
                </value>
                <value>
                    <fullName>PTS Quote Request</fullName>
                </value>
                <value>
                    <fullName>Advertising Quote Request</fullName>
                </value>
                <value>
                    <fullName>CAPEX Offset Revenue Share Projection Request</fullName>
                </value>
                <value>
                    <fullName>Change Request</fullName>
                </value>
                <value>
                    <fullName>Short Lead Time</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Advertising Quote Needed</fullName>
                    <isActive>false</isActive>
                    <label>Advertising Quote Needed</label>
                </value>
                <value>
                    <fullName>CAPEX Offset Revenue Share Projection Needed</fullName>
                    <isActive>false</isActive>
                    <label>CAPEX Offset Revenue Share Projection Needed</label>
                </value>
                <value>
                    <fullName>Connectivity/TV Quote Needed</fullName>
                    <isActive>false</isActive>
                    <label>Connectivity/TV Quote Needed</label>
                </value>
                <value>
                    <fullName>PTS Quote Needed</fullName>
                    <isActive>false</isActive>
                    <label>PTS Quote Needed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SR_LG_Rev_B_Quip_URL__c</fullName>
        <label>SR-LG Rev B Quip URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>In-Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>In-Process</fullName>
                    <isActive>false</isActive>
                    <label>In-Process</label>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                    <isActive>false</isActive>
                    <label>On Hold</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Support Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Opportunity__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Opportunity_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>L2I_Advertising_Team_L2I_Support_Request</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Advertising Team</label>
        <queue>L2I_Advertising_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_Connectivity_Team_L2I_Support_Request</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Connectivity Team</label>
        <queue>L2I_Connectivity_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_Customer_Engineering_L2I_Support_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Engineering</label>
        <queue>L2I_Customer_Engineering</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_Other_Support_Team_L2I_Support_Request</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Other Support Team</label>
        <queue>L2I_Other_Support_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_PTS_Team_L2I_Support_Request</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>PTS Team</label>
        <queue>L2I_PTS_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L2I_Revenue_Support_Team_L2I_Support_Request</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Account_Region__c</columns>
        <columns>Account_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Queue</filterScope>
        <label>Revenue Support Team</label>
        <queue>L2I_Revenue_Support_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sales_Operations_Team_L2I_Support_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Customer Solutions Proposal Mgmt Team</label>
        <queue>Customer_Solutions_Proposal_Mgmt_Team</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Short_Lead_Time_L2I_Support_Request</fullName>
        <filterScope>Queue</filterScope>
        <label>Short Lead Time</label>
        <queue>Short_Lead_Time</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Support Request No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Support Requests</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Only_Sales_Opportunity_are_allowed</fullName>
        <active>true</active>
        <errorConditionFormula>Opportunity__r.RecordType.DeveloperName != &quot;Sales&quot;</errorConditionFormula>
        <errorDisplayField>Opportunity__c</errorDisplayField>
        <errorMessage>User can only relate Support Request to Sales Opportunity.</errorMessage>
    </validationRules>
</CustomObject>